# xf86-input-evdev

./: .gitignore  .gitlab-ci.yml  Makefile.am  README.md  configure.ac  org.x.driver.input.evdev.metainfo.xml
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-code-cleanup.yml  04-doc-update.yml  05-org-task.yml
.github/workflows/: build.yml
include/: evdev-properties.h
man/: Makefile.am  evdev.man  evdev.man.in
src/: Makefile.am  apple.c  axis_labels.h  draglock.c  emuMB.c  emuThird.c  emuWheel.c  evdev.c  evdev.h
